--- a/src/style.css
+++ b/src/style.css
@@ -323,8 +323,8 @@ body {
 }
 
 .pill-blur {
-  filter: blur(20px);
-  transition: filter 0.3s ease;
+  /* filter: blur(20px); */
+  /* transition: filter 0.3s ease; */
 }
 
 .pill-no-blur {
